<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/material_grey"
    android:padding="16dp">


    <TextView
        android:id="@+id/txt_take_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:drawableLeft="@mipmap/ic_camera_take_photo"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/take_photo"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_choose_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@mipmap/ic_gallery"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/choose_photo"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_take_photo" />

    <TextView
        android:id="@+id/txt_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/close"
        android:textAllCaps="true"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@+id/txt_choose_photo"
        app:layout_constraintTop_toBottomOf="@+id/txt_choose_photo" />
</android.support.constraint.ConstraintLayout>
